--- a/style.css
+++ b/style.css
@@ -5,13 +5,13 @@ text-align: center;
 }
 
 body{
-  background-color:  #00b386;
+ background-image: url("http://vignette1.wikia.nocookie.net/vsbattles/images/6/62/Supershenron.png/revision/latest?cb=20160706134151");
+background-repeat: no-repeat;
+   background-color:  #00b386;
 }
 p {
-text-align: center;
+text-align: ;
 }
-h2{
-text-align: center;
 }
 p{
   text-align: center;
