--- a/style.css
+++ b/style.css
@@ -1,18 +1,27 @@
-@import url('https://fonts.googleapis.com/css?family=Macondo|Press+Start+2P');
+@import url('https://fonts.googleapis.com/css?family=Press+Start+2P');
 
 h1{font-family: 'Press Start 2P', cursive;
 text-align: center;
 }
+h2{margin-left: 10px;
+margin-left: 2em;
+margin-left: 5%;}
+
+h3{font-size: 20px;
+  margin-left: 10px;
+  margin-left: 2em;
+  margin-left: 5%;}
+
+p {
+display: block;
+text-align: justify ;
+font-size: 20px;
+margin-left: 10px;
+margin-left: 2em;
+margin-left: 5%;}
 
 body{
  background-image: url("http://vignette1.wikia.nocookie.net/vsbattles/images/6/62/Supershenron.png/revision/latest?cb=20160706134151");
 background-repeat: no-repeat;
    background-color:  #00b386;
-}
-p {
-text-align: ;
-}
-}
-p{
-  text-align: center;
 }
