--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ h3{font-size: 20px;
   margin-left: 5%;}
 
 p {
-display: block;
-text-align: justify ;
+display:block;
+text-align: justify all;
 font-size: 20px;
 margin-left: 10px;
 margin-left: 2em;
