--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ margin-left: 2em;
 margin-left: 5%;}
 
 body{
- background-image: url("http://vignette1.wikia.nocookie.net/vsbattles/images/6/62/Supershenron.png/revision/latest?cb=20160706134151");
+ background-image: url("http://vignette1.wikia.nocookie.net/vsbattles/images/6/62/Supershenron.png/revision/latest?cb=2016070613415");
 background-repeat: no-repeat;
-   background-color:  #00b386;
+   background-color:  #ff9900;
 }
