--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ margin-right: 2em;
 margin-right: 5%;}
 
 body{
- background-image: url("http://vignette1.wikia.nocookie.net/vsbattles/images/6/62/Supershenron.png/revision/latest?cb=2016070613415");
+ background-image: url(http://www.kanzenshuu.com/guides/movie/battle_of_gods/bog_extended_007-large.png?x48035);
 background-repeat: no-repeat;
    background-color:  #ff9900;
 }
