--- a/style.css
+++ b/style.css
@@ -3,19 +3,23 @@
 
 h1{font-family: 'Press Start 2P', cursive;
 text-align: center;
+color:  #ff9900;
 }
 h2{font-size: 40px;
 margin-left: 10px;
 margin-left: 2em;
 margin-left: 5%;
 font-family: 'Ceviche One', cursive;
+color:#ff00bf;
 }
 
 h3{font-size: 25px;
   margin-left: 10px;
   margin-left: 2em;
   margin-left: 5%;
-  font-family: 'Ceviche One', cursive;}
+  font-family: 'Ceviche One', cursive;
+  color: #ff00bf;
+}
 
 p {
 display:block;
@@ -26,10 +30,27 @@ margin-left: 2em;
 margin-left: 5%;
 margin-right: 10px;
 margin-right: 2em;
-margin-right: 5%;}
+margin-right: 5%;
+color: #ff00bf;
+}
 
-body{
- background-image: url(http://www.kanzenshuu.com/guides/movie/battle_of_gods/bog_extended_007-large.png?x48035);
-background-repeat: no-repeat;
-   background-color:  #ff9900;
+li{display:block;
+text-align: justify all;
+font-size: 20px;
+margin-left: 10px;
+margin-left: 2em;
+margin-left: 5%;
+margin-right: 10px;
+margin-right: 2em;
+margin-right: 5%;
+color: #ff00bf;
+}
+
+.multi_bg_example {
+  width: 100%;
+  height: 100%;
+  background-image: url(https://s2-ssl.dmcdn.net/Ah1_3/1280x720-An2.jpg), url(http://sm.ign.com/ign_br/screenshot/default/maxresdefault-3_exz8.jpg), linear-gradient(to left, rgba(30, 75, 115, 1), rgba(255, 255, 255, 0));
+  background-repeat: no-repeat, no-repeat, no-repeat;
+  background-position: top, center, bottom;
+  background: -moz-linear-gradient(to right, rgba(30, 75, 115, 1), rgba(255, 255, 255, 0)), -webkit-gradient(to right, rgba(30, 75, 115, 1), rgba(255, 255, 255, 0)), -ms-linear-gradient(to left, rgba(30, 75, 115, 1), rgba(255, 255, 255, 0)), linear-gradient(to right, rgba(30, 75, 115, 1), rgba(255, 255, 255, 0));
 }
